Fix EPG timeline alignment

--- a/src/UKP.Website/Content/css/application.css
+++ b/src/UKP.Website/Content/css/application.css
@@ -78,9 +78,6 @@ ol.channel-list li::before {
 
 .timeline {
     overflow: hidden;
-}
-
-.lt-ie10 .timeline {
     margin-left: 129px;
 }
 
